[gd_scene load_steps=2 format=3 uid="uid://cuyqv80tsuncp"]

[ext_resource type="Script" uid="uid://t74tai0pna8r" path="res://preset_popup/preset_popup.gd" id="1_46ow0"]

[node name="PresetPopup" type="ColorRect"]
custom_minimum_size = Vector2(400, 90)
offset_right = 600.0
offset_bottom = 400.0
color = Color(0.239216, 0.239216, 0.239216, 0.756863)
script = ExtResource("1_46ow0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -45.0
offset_right = 200.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.617455, 0.617455, 0.617455, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 76.0

[node name="TitleLineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "dicks"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="OkButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "OK"

[node name="CancelButton" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
